cdk.out/cdk-stack.template.json
{
 "Resources": {
  "vpc555222327AFC16C5": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/Resource"
   }
  },
  "vpc55522232PublicSubnet1Subnet8C1D3F0B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet1/Subnet"
   }
  },
  "vpc55522232PublicSubnet1RouteTable201E0132": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet1/RouteTable"
   }
  },
  "vpc55522232PublicSubnet1RouteTableAssociationFC3053F6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc55522232PublicSubnet1RouteTable201E0132"
    },
    "SubnetId": {
     "Ref": "vpc55522232PublicSubnet1Subnet8C1D3F0B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet1/RouteTableAssociation"
   }
  },
  "vpc55522232PublicSubnet1DefaultRoute3576EEAF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpc55522232IGW2124CFCD"
    },
    "RouteTableId": {
     "Ref": "vpc55522232PublicSubnet1RouteTable201E0132"
    }
   },
   "DependsOn": [
    "vpc55522232VPCGW0E59A086"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet1/DefaultRoute"
   }
  },
  "vpc55522232PublicSubnet1EIP2B529517": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet1/EIP"
   }
  },
  "vpc55522232PublicSubnet1NATGateway8F921A30": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "vpc55522232PublicSubnet1EIP2B529517",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "vpc55522232PublicSubnet1Subnet8C1D3F0B"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "vpc55522232PublicSubnet1DefaultRoute3576EEAF",
    "vpc55522232PublicSubnet1RouteTableAssociationFC3053F6"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet1/NATGateway"
   }
  },
  "vpc55522232PublicSubnet2Subnet82DD7CE0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet2/Subnet"
   }
  },
  "vpc55522232PublicSubnet2RouteTableB74BC90B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet2/RouteTable"
   }
  },
  "vpc55522232PublicSubnet2RouteTableAssociation94475C00": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc55522232PublicSubnet2RouteTableB74BC90B"
    },
    "SubnetId": {
     "Ref": "vpc55522232PublicSubnet2Subnet82DD7CE0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet2/RouteTableAssociation"
   }
  },
  "vpc55522232PublicSubnet2DefaultRoute96F97D0D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpc55522232IGW2124CFCD"
    },
    "RouteTableId": {
     "Ref": "vpc55522232PublicSubnet2RouteTableB74BC90B"
    }
   },
   "DependsOn": [
    "vpc55522232VPCGW0E59A086"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet2/DefaultRoute"
   }
  },
  "vpc55522232PublicSubnet2EIP9D615FD5": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet2/EIP"
   }
  },
  "vpc55522232PublicSubnet2NATGatewayCE45ECF6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "vpc55522232PublicSubnet2EIP9D615FD5",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "vpc55522232PublicSubnet2Subnet82DD7CE0"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "vpc55522232PublicSubnet2DefaultRoute96F97D0D",
    "vpc55522232PublicSubnet2RouteTableAssociation94475C00"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet2/NATGateway"
   }
  },
  "vpc55522232PublicSubnet3SubnetB60D3678": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet3/Subnet"
   }
  },
  "vpc55522232PublicSubnet3RouteTableE4B6F284": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet3/RouteTable"
   }
  },
  "vpc55522232PublicSubnet3RouteTableAssociationE9DD046D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc55522232PublicSubnet3RouteTableE4B6F284"
    },
    "SubnetId": {
     "Ref": "vpc55522232PublicSubnet3SubnetB60D3678"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet3/RouteTableAssociation"
   }
  },
  "vpc55522232PublicSubnet3DefaultRoute4A067F3E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpc55522232IGW2124CFCD"
    },
    "RouteTableId": {
     "Ref": "vpc55522232PublicSubnet3RouteTableE4B6F284"
    }
   },
   "DependsOn": [
    "vpc55522232VPCGW0E59A086"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet3/DefaultRoute"
   }
  },
  "vpc55522232PublicSubnet3EIP60F7BABB": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet3/EIP"
   }
  },
  "vpc55522232PublicSubnet3NATGateway285C26A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "vpc55522232PublicSubnet3EIP60F7BABB",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "vpc55522232PublicSubnet3SubnetB60D3678"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PublicSubnet3"
     }
    ]
   },
   "DependsOn": [
    "vpc55522232PublicSubnet3DefaultRoute4A067F3E",
    "vpc55522232PublicSubnet3RouteTableAssociationE9DD046D"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PublicSubnet3/NATGateway"
   }
  },
  "vpc55522232PrivateSubnet1Subnet2E4DA426": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet1/Subnet"
   }
  },
  "vpc55522232PrivateSubnet1RouteTableC546D020": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet1/RouteTable"
   }
  },
  "vpc55522232PrivateSubnet1RouteTableAssociation98BDECFD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc55522232PrivateSubnet1RouteTableC546D020"
    },
    "SubnetId": {
     "Ref": "vpc55522232PrivateSubnet1Subnet2E4DA426"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "vpc55522232PrivateSubnet1DefaultRouteD15CA2D8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpc55522232PublicSubnet1NATGateway8F921A30"
    },
    "RouteTableId": {
     "Ref": "vpc55522232PrivateSubnet1RouteTableC546D020"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet1/DefaultRoute"
   }
  },
  "vpc55522232PrivateSubnet2SubnetBF911E75": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet2/Subnet"
   }
  },
  "vpc55522232PrivateSubnet2RouteTableC23CB4A9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet2/RouteTable"
   }
  },
  "vpc55522232PrivateSubnet2RouteTableAssociationE7D278B5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc55522232PrivateSubnet2RouteTableC23CB4A9"
    },
    "SubnetId": {
     "Ref": "vpc55522232PrivateSubnet2SubnetBF911E75"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "vpc55522232PrivateSubnet2DefaultRoute306FAD64": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpc55522232PublicSubnet2NATGatewayCE45ECF6"
    },
    "RouteTableId": {
     "Ref": "vpc55522232PrivateSubnet2RouteTableC23CB4A9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet2/DefaultRoute"
   }
  },
  "vpc55522232PrivateSubnet3SubnetC9D7ECC5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet3/Subnet"
   }
  },
  "vpc55522232PrivateSubnet3RouteTable571A2BD8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet3/RouteTable"
   }
  },
  "vpc55522232PrivateSubnet3RouteTableAssociationF86DE320": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpc55522232PrivateSubnet3RouteTable571A2BD8"
    },
    "SubnetId": {
     "Ref": "vpc55522232PrivateSubnet3SubnetC9D7ECC5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "vpc55522232PrivateSubnet3DefaultRoute23A9E99F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpc55522232PublicSubnet3NATGateway285C26A6"
    },
    "RouteTableId": {
     "Ref": "vpc55522232PrivateSubnet3RouteTable571A2BD8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/PrivateSubnet3/DefaultRoute"
   }
  },
  "vpc55522232IGW2124CFCD": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/vpc-55522232"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/IGW"
   }
  },
  "vpc55522232VPCGW0E59A086": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "vpc55522232IGW2124CFCD"
    },
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/vpc-55522232/VPCGW"
   }
  },
  "alb8A8B13C2": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internal",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "albSecurityGroup49866104",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "vpc55522232PrivateSubnet1Subnet2E4DA426"
     },
     {
      "Ref": "vpc55522232PrivateSubnet2SubnetBF911E75"
     },
     {
      "Ref": "vpc55522232PrivateSubnet3SubnetC9D7ECC5"
     }
    ],
    "Type": "application"
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/alb/Resource"
   }
  },
  "albSecurityGroup49866104": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB cdkstackalb6DF91EA2",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/alb/SecurityGroup/Resource"
   }
  },
  "albSecurityGrouptocdkstackasgInstanceSecurityGroup3E3F3E71809881611E": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "asgInstanceSecurityGroup5CEB2975",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "albSecurityGroup49866104",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/alb/SecurityGroup/to cdkstackasgInstanceSecurityGroup3E3F3E71:80"
   }
  },
  "albListener3EA0B2EF": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "albListenerdefaulttargetGroup79BAE92B"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "alb8A8B13C2"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/alb/Listener/Resource"
   }
  },
  "albListenerdefaulttargetGroup79BAE92B": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 30,
    "HealthCheckPath": "/",
    "HealthyThresholdCount": 5,
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "UnhealthyThresholdCount": 2,
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/alb/Listener/default-targetGroup/Resource"
   }
  },
  "albListenerstaticRule4F017351": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "FixedResponseConfig": {
       "ContentType": "text/html",
       "MessageBody": "<h1>Static ALB Response</h1>",
       "StatusCode": "200"
      },
      "Type": "fixed-response"
     }
    ],
    "Conditions": [
     {
      "Field": "path-pattern",
      "PathPatternConfig": {
       "Values": [
        "/static"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "albListener3EA0B2EF"
    },
    "Priority": 5
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/alb/Listener/--staticRule/Resource"
   }
  },
  "asgInstanceSecurityGroup5CEB2975": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "cdk-stack/asg/InstanceSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/asg"
     }
    ],
    "VpcId": {
     "Ref": "vpc555222327AFC16C5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/asg/InstanceSecurityGroup/Resource"
   }
  },
  "asgInstanceSecurityGroupfromcdkstackalbSecurityGroup20A8C03080818D6412": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "asgInstanceSecurityGroup5CEB2975",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "albSecurityGroup49866104",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/asg/InstanceSecurityGroup/from cdkstackalbSecurityGroup20A8C030:80"
   }
  },
  "asgInstanceRole8AC4201C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "cdk-stack/asg"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/asg/InstanceRole/Resource"
   }
  },
  "asgInstanceProfile4E44E320": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "asgInstanceRole8AC4201C"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/asg/InstanceProfile"
   }
  },
  "asgLaunchConfig37FDE42B": {
   "Type": "AWS::AutoScaling::LaunchConfiguration",
   "Properties": {
    "IamInstanceProfile": {
     "Ref": "asgInstanceProfile4E44E320"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t2.micro",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "asgInstanceSecurityGroup5CEB2975",
       "GroupId"
      ]
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nsudo su\nyum install -y httpd\nsystemctl start httpd\nsystemctl enable httpd\necho \"<h1>Hello World from $(hostname -f)</h1>\" > /var/www/html/index.html"
    }
   },
   "DependsOn": [
    "asgInstanceRole8AC4201C"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/asg/LaunchConfig"
   }
  },
  "asgASG4D014670": {
   "Type": "AWS::AutoScaling::AutoScalingGroup",
   "Properties": {
    "LaunchConfigurationName": {
     "Ref": "asgLaunchConfig37FDE42B"
    },
    "MaxSize": "3",
    "MinSize": "2",
    "Tags": [
     {
      "Key": "Name",
      "PropagateAtLaunch": true,
      "Value": "cdk-stack/asg"
     }
    ],
    "TargetGroupARNs": [
     {
      "Ref": "albListenerdefaulttargetGroup79BAE92B"
     }
    ],
    "VPCZoneIdentifier": [
     {
      "Ref": "vpc55522232PrivateSubnet1Subnet2E4DA426"
     },
     {
      "Ref": "vpc55522232PrivateSubnet2SubnetBF911E75"
     },
     {
      "Ref": "vpc55522232PrivateSubnet3SubnetC9D7ECC5"
     }
    ]
   },
   "UpdatePolicy": {
    "AutoScalingScheduledAction": {
     "IgnoreUnmodifiedGroupSizeProperties": true
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/asg/ASG"
   }
  },
  "asgScalingPolicyrequestsperminute5D73703F": {
   "Type": "AWS::AutoScaling::ScalingPolicy",
   "Properties": {
    "AutoScalingGroupName": {
     "Ref": "asgASG4D014670"
    },
    "PolicyType": "TargetTrackingScaling",
    "TargetTrackingConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ALBRequestCountPerTarget",
      "ResourceLabel": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           1,
           {
            "Fn::Split": [
             "/",
             {
              "Ref": "albListener3EA0B2EF"
             }
            ]
           }
          ]
         },
         "/",
         {
          "Fn::Select": [
           2,
           {
            "Fn::Split": [
             "/",
             {
              "Ref": "albListener3EA0B2EF"
             }
            ]
           }
          ]
         },
         "/",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             "/",
             {
              "Ref": "albListener3EA0B2EF"
             }
            ]
           }
          ]
         },
         "/",
         {
          "Fn::GetAtt": [
           "albListenerdefaulttargetGroup79BAE92B",
           "TargetGroupFullName"
          ]
         }
        ]
       ]
      }
     },
     "TargetValue": 60
    }
   },
   "DependsOn": [
    "albListenerstaticRule4F017351",
    "albListenerdefaulttargetGroup79BAE92B",
    "albListener3EA0B2EF"
   ],
   "Metadata": {
    "aws:cdk:path": "cdk-stack/asg/ScalingPolicyrequests-per-minute/Resource"
   }
  },
  "asgScalingPolicycpuutilscaling06365506": {
   "Type": "AWS::AutoScaling::ScalingPolicy",
   "Properties": {
    "AutoScalingGroupName": {
     "Ref": "asgASG4D014670"
    },
    "PolicyType": "TargetTrackingScaling",
    "TargetTrackingConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ASGAverageCPUUtilization"
     },
     "TargetValue": 75
    }
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/asg/ScalingPolicycpu-util-scaling/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31Sy27CMBD8Fu7GFbQ99EgRQpFQGyWIa7UxSzAkdmSvQSjKv9d5kSCqnnZndrQejz3nH+98NoGrnYr9eZrJhJcxgTgzT/2UKOa83BWCLQ9qFy5Z6JJMitglCqnmhi7SjnALSYYDP3ALa7WQQFKru7huVkFYly+gNRBe4cZCIy++HRYHitD4vhe0Tjq0IO/1mKMiFqNwRtJtbbQrGg//EqvUoLVPdKAavmKYgSUpMg37BDJQQqr04sNYFIVPoLnJxs8+mxmaetEDHuukJVSdpu9H8y2Y1N+vtzmGf2yJXBvxGFcMHGkrIPMuvUcP4hbct27AKXFcanWQqTP3l3iStqdvjf8CnutGofYumugfiIpJyHkZ6dZRXwNlqQ4hNPogvbmKRWi1M6KZhmAgR2rj+HZUuPb/dJKKKb1HfrIvl9kbn8/46+RkpZwap0jmyKO2/gL2/416u [...]
   },
   "Metadata": {
    "aws:cdk:path": "cdk-stack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "albDNS": {
   "Value": {
    "Fn::GetAtt": [
     "alb8A8B13C2",
     "DNSName"
    ]
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
